disable end/start buttons if no items in list

--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -26,6 +26,13 @@
         android:text="@string/start_clinic"
         android:theme="@style/CallToActionButton"/>
 
+    <Button
+        android:id="@+id/btn_start_clinic_disable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/start_clinic"
+        android:textSize="@dimen/text_medium"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,6 +52,13 @@
         android:layout_height="wrap_content"
         android:text="@string/stop_clinic"
         android:theme="@style/CallToActionButton"/>
+
+    <Button
+        android:id="@+id/btn_stop_clinic_disable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/stop_clinic"
+        android:textSize="@dimen/text_medium"/>
 
     <TextView
         android:layout_width="match_parent"
