--- a/app/src/main/res/layout/dialog_history.xml
+++ b/app/src/main/res/layout/dialog_history.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/rl_dialog_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tv_history_dialog_title"
@@ -30,22 +31,16 @@
             android:src="@drawable/ic_close"/>
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/btn_add_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/add_to_history"
+        android:theme="@style/SecondaryButton"/>
+
     <ListView
         android:id="@+id/lv_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_add_history"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/add_to_history"
-            android:theme="@style/SecondaryButton"/>
-
-    </LinearLayout>
 </LinearLayout>
