--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -78,4 +78,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/btn_reset_clinic_record"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reset Clinic Record"
+        android:textSize="@dimen/text_medium"/>
+
 </LinearLayout>
