--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,8 @@
         <item name="colorButtonNormal">@color/teal</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/text_medium</item>
+        <item name="android:paddingTop">@dimen/padding_small</item>
+        <item name="android:paddingBottom">@dimen/padding_small</item>
     </style>
 
     <style name="NotToAction">
